--- a/app/pages/popup.html
+++ b/app/pages/popup.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <label for="add_reference_checkbox">Add reference to original issue</label>
-            </div>
+            </div><br/>
             <div id="copy_description_field" class="mdc-form-field">
                 <div id="copy_description" class="gic-checkbox mdc-checkbox">
                     <input type="checkbox" id="copy_description_checkbox" title="Copy description"
@@ -62,6 +62,21 @@
                     </div>
                 </div>
                 <label for="copy_description_checkbox">Copy description</label>
+            </div><br/>
+            <div id="self_assign_field" class="mdc-form-field">
+                <div id="self_assign" class="gic-checkbox mdc-checkbox">
+                    <input type="checkbox" id="self_assign_checkbox" title="Assign yourself"
+                           class="mdc-checkbox__native-control"/>
+                    <div class="mdc-checkbox__background">
+                        <svg class="mdc-checkbox__checkmark" viewBox="0 0 24 24">
+                            <path class="mdc-checkbox__checkmark-path"
+                                  fill="none"
+                                  d="M1.73,12.91 8.1,19.28 22.79,4.59"></path>
+                        </svg>
+                        <div class="mdc-checkbox__mixedmark"></div>
+                    </div>
+                </div>
+                <label for="self_assign_checkbox">Assign yourself</label>
             </div>
 
             <button id="button" class="gic-button mdc-button mdc-button--raised">Copy</button>
